--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
     top: 0;
 }
 body{
-    background: aqua;
+    background: black;
     width: 100%;
     height:  100vh;
 }
@@ -21,8 +21,11 @@ body{
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
+    padding-bottom: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     justify-content: space-between;
-    background-color: aliceblue;
+    background-color: #fff;
     height: 60px;
 }
 .navbar .logo{
